# cavas

./: PRD.md  README.md  metadata.json  server.ts
src/: App.tsx  index.css  types.ts
src-rust/: Cargo.toml
src-rust/src/: lib.rs
src/components/: CommandMenu.tsx  ConnectionLine.tsx  ContextMenu.tsx  GlobalCanvas.tsx  GroupNode.tsx  LogPanel.tsx  MiniMap.tsx  NoteNode.tsx  OrchestrationPanel.tsx  SessionNode.tsx  Sidebar.tsx  TaskTracker.tsx
src/services/: rustBridge.ts
