[package]
name = "opencode-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for OpenCode Canvas, including layout algorithms and code analysis."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
